fixes sizing of letters, adds gap between letters

--- a/src/GameBoard.css
+++ b/src/GameBoard.css
@@ -11,7 +11,7 @@
 .gameBoard {
     background-color: #000000;
     color: white;
-    height: 100vh;
+    height: 100%;
     width: 100%;
     margin: 0 auto;
     max-width: 500px;
