--- a/src/Letter.css
+++ b/src/Letter.css
@@ -1,29 +1,19 @@
 .LetterBox{
-    height: 40px;
-    width: 40px;
+    all: unset;
+    height: 3em;
+    width: 3em;
+    font-size: 1.5em;
     background-color: #346b31;
     text-align: center;
     font-weight: bold;
-    line-height: 40px;
+    line-height: 3em;
     text-transform: uppercase;
 }
 
-.LetterBox-used{
-    height: 40px;
-    width: 40px;
+.used{
     background-color: #676967;
-    text-align: center;
-    font-weight: bold;
-    line-height: 40px;
-    text-transform: uppercase;
 }
 
-.LetterBox-guess{
-    height: 40px;
-    width: 40px;
+.guess{
     background-color: #000000;
-    text-align: center;
-    font-weight: bold;
-    line-height: 40px;
-    text-transform: uppercase;
 }
